--- a/build.gradle
+++ b/build.gradle
@@ -74,30 +74,31 @@ if(osdetector.arch.equals('x86_32')){
 }
 
 dependencies {
-    compile group: 'org.boofcv', name: 'all', version: '0.26'
+    compile group: 'org.boofcv', name: 'boofcv-all', version: '0.27'
+    compile group: 'org.ejml', name: 'ejml-core', version: '0.32'
 	compile group: 'org.jcodec', name: 'jcodec-javase', version: '0.1.9'
 	compile group: 'net.coobird', name: 'thumbnailator', version: '0.4.8'
 	compile group: 'net.sf.trove4j', name: 'trove4j', version: '3.0.3'
-	compile group: 'com.google.guava', name: 'guava', version: '19.0'
-	compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.7'
-	compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.7'
-	compile group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: '2.7'
-	compile group: 'commons-codec', name: 'commons-codec', version: '1.10'
-	compile group: 'commons-cli', name: 'commons-cli', version: '1.3.1'
+	compile group: 'com.google.guava', name: 'guava', version: '23.5-jre'
+	compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.9.1'
+	compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.9.1'
+	compile group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: '2.9.1'
+	compile group: 'commons-codec', name: 'commons-codec', version: '1.11'
+	compile group: 'commons-cli', name: 'commons-cli', version: '1.4'
 	compile group: 'com.google.protobuf', name: 'protobuf-java', version: '3.1.0'
 	compile group: 'io.grpc', name: 'grpc-netty', version: '1.0.2'
 	compile group: 'io.grpc', name: 'grpc-protobuf', version: '1.0.2'
 	compile group: 'io.grpc', name: 'grpc-stub', version: '1.0.2'
-    compile group: 'org.bytedeco', name: 'javacpp', version: '1.3.1'
+    compile group: 'org.bytedeco', name: 'javacpp', version: '1.3.3'
 	compile group: 'org.jgrapht', name: 'jgrapht-core', version: '1.0.1'
-    compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.8.8'
-    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.8.8'
     compile group: 'com.sparkjava', name: 'spark-core', version: '2.5.5'
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.9.2'
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.2'
 
     /**
      * Apache Commons Libraries
      */
-    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.5'
+    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.7'
     compile group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'
     compile group: 'org.apache.commons', name: 'commons-csv', version: '1.5'
     compile group: 'de.svenkubiak', name: 'jBCrypt', version: '0.4'
@@ -119,9 +120,9 @@ dependencies {
     /**
      * Test dependencies (JUnit 5)
      */
-    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.0.0-M5'
-    testCompile group: 'org.junit.platform', name: 'junit-platform-launcher', version:'1.0.0-M5'
-    testRuntime group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.0.0-M5'
+    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.0.2'
+    testCompile group: 'org.junit.platform', name: 'junit-platform-launcher', version:'1.0.2'
+    testRuntime group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.0.2'
     
 
     /**
@@ -215,20 +216,21 @@ task downloadExternalFiles(type: Download){
 	dest 'resources/vgg16'
 }
 
-task copyResources() << {
-	copy {
-		from "cineast.json"
-		into "$buildDir/libs/"
+task copyResources{ 
+	doLast {
+		copy {
+			from "cineast.json"
+			into "$buildDir/libs/"
+		}
+		copy {
+			from "mime.types"
+			into "$buildDir/libs/"
+		}
+		copy {
+			from "resources"
+			into "$buildDir/libs/resources/"
+		}
 	}
-	copy {
-		from "mime.types"
-		into "$buildDir/libs/"
-	}
-	copy {
-		from "resources"
-		into "$buildDir/libs/resources/"
-	}
-	
 }
 	
 task deploy(dependsOn: [build, jar, copyResources])
