--- a/.gitignore
+++ b/.gitignore
@@ -21,13 +21,15 @@ bin
 .classpath
 .settings/
 
-
+##IntelliJ
 .idea
+cineast.iml
+
+##Data
 /proto/
 /representative_frames/
 /thumbnails/
 /queryImages/
-/src/org/vitrivr/cineast/test/
 
 ##Framecache
 /framecache_*
@@ -44,3 +46,6 @@ retrieval_results_*
 out/
 basel-historic-images/
 index*
+
+##JSON
+/db/**/*.json
