--- a/build.gradle
+++ b/build.gradle
@@ -74,8 +74,9 @@ if(osdetector.arch.equals('x86_32')){
 }
 
 dependencies {
+    compile group: 'com.squareup.okhttp3', name: 'okhttp', version: '3.9.1'
     compile group: 'org.boofcv', name: 'boofcv-all', version: '0.27'
-    compile group: 'org.ejml', name: 'ejml-core', version: '0.32'
+    compile group: 'org.ejml', name: 'ejml-all', version: '0.32'
 	compile group: 'org.jcodec', name: 'jcodec-javase', version: '0.1.9'
 	compile group: 'net.coobird', name: 'thumbnailator', version: '0.4.8'
 	compile group: 'net.sf.trove4j', name: 'trove4j', version: '3.0.3'
@@ -94,6 +95,7 @@ dependencies {
     compile group: 'com.sparkjava', name: 'spark-core', version: '2.7.1'
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.9.2'
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.2'
+    compile group: 'com.googlecode.javaewah', name: 'JavaEWAH', version: '1.1.6'
 
     /**
      * Apache Commons Libraries
