--- a/build.gradle
+++ b/build.gradle
@@ -104,6 +104,8 @@ dependencies {
     compile group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'
     compile group: 'org.apache.commons', name: 'commons-csv', version: '1.5'
     compile group: 'de.svenkubiak', name: 'jBCrypt', version: '0.4'
+    compile group: 'commons-io', name: 'commons-io', version: '2.6'
+
 
     /**
      * TwelveMonkey's ImageIO library + Metadata Extractor for advanced image support .
