--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,7 @@ apply plugin: 'org.junit.platform.gradle.plugin'
 
 repositories {
    mavenCentral()
-  
+
 }
 
 junitPlatform {
@@ -74,13 +74,14 @@ if(osdetector.arch.equals('x86_32')){
 }
 
 dependencies {
-    compile group: 'com.squareup.okhttp3', name: 'okhttp', version: '3.9.1'
-    compile group: 'org.boofcv', name: 'boofcv-all', version: '0.27'
-    compile group: 'org.ejml', name: 'ejml-all', version: '0.32'
-	compile group: 'org.jcodec', name: 'jcodec-javase', version: '0.1.9'
+    compile group: 'com.squareup.okhttp3', name: 'okhttp', version: '3.10.0'
+    compile group: 'org.boofcv', name: 'boofcv-all', version: '0.29'
+    compile group: 'org.ejml', name: 'ejml-all', version: '0.33'
+    compile group: 'org.ejml', name: 'ejml-core', version: '0.33'
+    compile group: 'org.jcodec', name: 'jcodec-javase', version: '0.1.9'
 	compile group: 'net.coobird', name: 'thumbnailator', version: '0.4.8'
 	compile group: 'net.sf.trove4j', name: 'trove4j', version: '3.0.3'
-	compile group: 'com.google.guava', name: 'guava', version: '23.5-jre'
+	compile group: 'com.google.guava', name: 'guava', version: '24.1-jre'
 	compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.9.1'
 	compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.9.1'
 	compile group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: '2.9.1'
@@ -93,8 +94,8 @@ dependencies {
     compile group: 'org.bytedeco', name: 'javacpp', version: '1.3.3'
 	compile group: 'org.jgrapht', name: 'jgrapht-core', version: '1.0.1'
     compile group: 'com.sparkjava', name: 'spark-core', version: '2.7.1'
-    compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.9.2'
-    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.2'
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.9.5'
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.5'
     compile group: 'com.googlecode.javaewah', name: 'JavaEWAH', version: '1.1.6'
 
     /**
@@ -141,9 +142,9 @@ dependencies {
     /**
      * Manual Fixes for the javacpp-devs because of naming conventions & versions. Each os is handled independently
      */
-	 
+
     if(osdetector.os.equals('windows')){
-	
+
         compile group: 'org.bytedeco.javacpp-presets', name: 'tensorflow', version: '0.11.0-1.3'
         compile group: 'org.bytedeco.javacpp-presets', name: 'tensorflow', version: '0.11.0-1.3', classifier: osclassifier
         compile group: 'org.bytedeco.javacpp-presets', name: 'ffmpeg', version: '3.2.1-1.3'
@@ -206,14 +207,14 @@ sourceSets {
 }
 
 jar {
-	manifest { 
+	manifest {
 		attributes 'Main-Class': 'org.vitrivr.cineast.api.API'
-	}  
+	}
 
 	from {
 		configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
 	}
-	
+
 	archiveName = 'cineast.jar'
 }
 
@@ -229,7 +230,7 @@ task downloadExternalFiles(type: Download){
 	dest 'resources/vgg16'
 }
 
-task copyResources{ 
+task copyResources{
 	doLast {
 		copy {
 			from "cineast.json"
@@ -241,5 +242,5 @@ task copyResources{
 		}
 	}
 }
-	
+
 task deploy(dependsOn: [build, jar, copyResources])
