--- a/build.gradle
+++ b/build.gradle
@@ -97,6 +97,7 @@ dependencies {
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.9.5'
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.5'
     compile group: 'com.googlecode.javaewah', name: 'JavaEWAH', version: '1.1.6'
+    compile group: 'org.tensorflow', name: 'tensorflow', version: '1.9.0'
 
     /**
      * Apache Commons Libraries
@@ -145,8 +146,6 @@ dependencies {
 
     if(osdetector.os.equals('windows')){
 
-        compile group: 'org.bytedeco.javacpp-presets', name: 'tensorflow', version: '0.11.0-1.3'
-        compile group: 'org.bytedeco.javacpp-presets', name: 'tensorflow', version: '0.11.0-1.3', classifier: osclassifier
         compile group: 'org.bytedeco.javacpp-presets', name: 'ffmpeg', version: '3.2.1-1.3'
         compile group: 'org.bytedeco.javacpp-presets', name: 'ffmpeg', version: '3.2.1-1.3', classifier: osclassifier
 
@@ -157,8 +156,7 @@ dependencies {
         compile "org.jogamp.jogl:jogl-all:${joglVersion}:natives-windows-i586"
     }
     if(osdetector.os.contains('linux')){
-        compile group: 'org.bytedeco.javacpp-presets', name: 'tensorflow', version: '0.11.0-1.3'
-        compile group: 'org.bytedeco.javacpp-presets', name: 'tensorflow', version: '0.11.0-1.3', classifier: osclassifier
+
         compile group: 'org.bytedeco.javacpp-presets', name: 'ffmpeg', version: '3.2.1-1.3'
         compile group: 'org.bytedeco.javacpp-presets', name: 'ffmpeg', version: '3.2.1-1.3', classifier: osclassifier
 
@@ -173,8 +171,7 @@ dependencies {
         compile "org.jogamp.jogl:jogl-all:${joglVersion}:natives-linux-i586"
     }
     if(osdetector.os.equals('osx')){
-        compile group: 'org.bytedeco.javacpp-presets', name: 'tensorflow', version: '0.11.0-1.3'
-        compile group: 'org.bytedeco.javacpp-presets', name: 'tensorflow', version: '0.11.0-1.3', classifier: 'mac' + osclassifier
+
         compile group: 'org.bytedeco.javacpp-presets', name: 'ffmpeg', version: '3.2.1-1.3'
         compile group: 'org.bytedeco.javacpp-presets', name: 'ffmpeg', version: '3.2.1-1.3', classifier: 'mac' + osclassifier
 
