--- a/docs/prometheus_mac.yml
+++ b/docs/prometheus_mac.yml
@@ -42,3 +42,10 @@ scrape_configs:
 
     static_configs:
       - targets: ['host.docker.internal:19999']
+
+  - job_name: 'docker'
+    # metrics_path defaults to '/metrics'
+    # scheme defaults to 'http'.
+
+    static_configs:
+    - targets: ['docker.for.mac.host.internal:9323']
