Docker-compose works with network host

--- a/docs/linux/docker-compose.yml
+++ b/docs/linux/docker-compose.yml
@@ -11,8 +11,7 @@ services:
     - ./prometheus.yml:/etc/prometheus/prometheus.yml:ro
     depends_on:
     - cadvisor
-    networks:
-      hostnet: {}
+    network_mode: host
   cadvisor:
     image: google/cadvisor:latest
     container_name: cadvisor
@@ -23,17 +22,10 @@ services:
     - /var/run:/var/run:rw
     - /sys:/sys:ro
     - /var/lib/docker/:/var/lib/docker:ro
-    networks:
-      hostnet: {}
+    network_mode: host
   grafana:
     image: grafana/grafana:latest
     container_name: grafana-cineast
     ports:
     - 3000:3000
-    networks:
-      hostnet: {}
-
-networks:
-  hostnet:
-    external: true
-    name: host
+    network_mode: host
