--- a/docs/linux/prometheus.yml
+++ b/docs/linux/prometheus.yml
@@ -49,3 +49,9 @@ scrape_configs:
 
     static_configs:
     - targets: ['localhost:9323']
+
+  - job_name: cadvisor
+    scrape_interval: 5s
+    static_configs:
+    - targets:
+      -  ['localhost:8080']
