--- a/docs/mac/prometheus_mac.yml
+++ b/docs/mac/prometheus_mac.yml
@@ -49,3 +49,9 @@ scrape_configs:
 
     static_configs:
     - targets: ['docker.for.mac.host.internal:9323']
+
+  - job_name: cadvisor
+    scrape_interval: 5s
+    static_configs:
+    - targets:
+      - ['docker.for.mac.host.internal:8080']
