--- a/docs/mac/prometheus_mac.yml
+++ b/docs/mac/prometheus_mac.yml
@@ -50,8 +50,6 @@ scrape_configs:
     static_configs:
     - targets: ['docker.for.mac.host.internal:9323']
 
-  - job_name: cadvisor
-    scrape_interval: 5s
+  - job_name: 'cadvisor'
     static_configs:
-    - targets:
-      - ['docker.for.mac.host.internal:8080']
+    - targets: ['docker.for.mac.host.internal:8080']
