--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "adampro-grpc"]
 	path = adampro-grpc
 	url = https://github.com/vitrivr/ADAMpro-Protobuf.git
+[submodule "cottontaildb-proto"]
+	path = cottontaildb-proto
+	url = https://github.com/ppanopticon/cottontaildb-proto
