--- a/build.gradle
+++ b/build.gradle
@@ -14,14 +14,14 @@ buildscript {
   }
   dependencies {
       classpath "gradle.plugin.com.google.gradle:osdetector-gradle-plugin:1.4.0"
-      classpath 'gradle.plugin.com.google.protobuf:protobuf-gradle-plugin:0.8.0'
+      classpath 'gradle.plugin.com.google.protobuf:protobuf-gradle-plugin:0.8.8'
       classpath 'de.undercouch:gradle-download-task:3.1.2'
       classpath 'org.junit.platform:junit-platform-gradle-plugin:1.0.0-M4'
   }
 }
 
-apply plugin: 'com.google.protobuf'
 apply plugin: 'java'
+apply plugin: 'com.google.protobuf'
 apply plugin: 'org.junit.platform.gradle.plugin'
 
 repositories {
@@ -49,11 +49,11 @@ compileTestJava.options.compilerArgs += enabledWarnings
 
 protobuf {
   protoc {
-    artifact = 'com.google.protobuf:protoc:3.1.0'
+    artifact = 'com.google.protobuf:protoc:3.4.0'
   }
   plugins {
     grpc {
-      artifact = 'io.grpc:protoc-gen-grpc-java:1.0.1'
+      artifact = 'io.grpc:protoc-gen-grpc-java:1.7.0'
     }
   }
   generatedFilesBaseDir = "$projectDir/generated/"
@@ -198,7 +198,8 @@ sourceSets {
 			srcDir 'config'
 		}
 		proto {
-			srcDir 'adampro-grpc/src/main/protobuf'
+            srcDir 'adampro-grpc/src/main/protobuf'
+            //srcDir 'cottontaildb-proto/src/main/protobuf'
 		}
     }
     test {
