--- a/build.gradle
+++ b/build.gradle
@@ -98,6 +98,7 @@ dependencies {
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.5'
     compile group: 'com.googlecode.javaewah', name: 'JavaEWAH', version: '1.1.6'
     compile group: 'org.tensorflow', name: 'tensorflow', version: '1.9.0'
+    compile group: 'com.eclipsesource.minimal-json', name: 'minimal-json', version: '0.9.5'
 
     /**
      * Apache Commons Libraries
