Added 'Multi-release' attribute to jar in order to fix log4j issue

--- a/build.gradle
+++ b/build.gradle
@@ -213,7 +213,10 @@ sourceSets {
 
 jar {
 	manifest {
-		attributes 'Main-Class': 'org.vitrivr.cineast.api.API'
+		attributes(
+                'Main-Class': 'org.vitrivr.cineast.api.API',
+                'Multi-Release' : 'true'
+        )
 	}
 
 	from {
