--- a/cineast.json
+++ b/cineast.json
@@ -1,9 +1,9 @@
 {
 	"database": {
-		"host": "10.34.58.93",
-		"selector": "ADAMPRO",
-    "writer": "ADAMPRO",
-		"port": 5890,
+		"host": "dmi-p10.dmi.unibas.ch",
+		"selector": "COTTONTAIL",
+    	"writer": "COTTONTAIL",
+		"port": 1865,
 		"plaintext": true
 	},
 	"benchmark": {
@@ -15,6 +15,11 @@
 		"maxResults": 200,
 		"resultsPerModule": 250,
 		"features": {
+			"boolean" : [
+				{"feature":  "DailyRangeBooleanRetriever", "weight": 1.0},
+				{"feature":  "DailyCollectionBooleanRetriever", "weight": 1.0},
+				{"feature":  "WSDMTICollectionBooleanRetriever", "weight": 1.0}
+			],
 			"semantic" : [
 				{"feature": "ConceptMasksAde20k", "weight" : 1.0}
 			],
@@ -22,22 +27,22 @@
 				{"feature": "AverageColor",	"weight": 2.3},
 				{"feature": "MedianColor", "weight": 1.2},
 				{"feature": "AverageFuzzyHist", "weight": 0.7},
-        {"feature": "AverageFuzzyHistNormalized", "weight": 0.7},
-        {"feature": "HueHistogram", "weight": 0.7},
+        		{"feature": "AverageFuzzyHistNormalized", "weight": 0.7},
+        		{"feature": "HueHistogram", "weight": 0.7},
 				{"feature": "MedianFuzzyHist", 	"weight": 1.3 }
 			],
 			"localcolor": [
-//				{"feature": "AverageColorARP44", "weight": 0.5},
-//				{"feature": "AverageColorARP44Normalized", "weight": 0.5},
-//				{"feature": "SubDivAverageFuzzyColor", "weight": 0.5},
-//				{"feature": "SubDivMedianFuzzyColor", "weight": 0.85},
+				{"feature": "AverageColorARP44", "weight": 0.5},
+				{"feature": "AverageColorARP44Normalized", "weight": 0.5},
+				{"feature": "SubDivAverageFuzzyColor", "weight": 0.5},
+				{"feature": "SubDivMedianFuzzyColor", "weight": 0.85},
 				{"feature": "AverageColorGrid8", "weight": 1.8},
-//				{"feature": "AverageColorGrid8Normalized", "weight": 1.8},
-//				{"feature": "AverageColorCLD", "weight": 1.4},
-//				{"feature": "AverageColorCLDNormalized", "weight": 1.4},
+				{"feature": "AverageColorGrid8Normalized", "weight": 1.8},
+				{"feature": "AverageColorCLD", "weight": 1.4},
+				{"feature": "AverageColorCLDNormalized", "weight": 1.4},
 				{"feature": "CLD", "weight": 1.3},
-//				{"feature": "CLDNormalized", "weight": 1.3},
-//				{"feature": "MedianColorGrid8", "weight": 1.7},
+				{"feature": "CLDNormalized", "weight": 1.3},
+				{"feature": "MedianColorGrid8", "weight": 1.7},
         {"feature": "AverageColorRaster", "weight": 1.0}
 			],
 			"edge": [
@@ -54,11 +59,11 @@
 				{"feature": "SubDivMotionHistogramBackground5", "weight": 0.5}
 			],
 			"quantized": [
-//				{"feature": "AverageColorGrid8Reduced11", "weight": 1.0},
+				{"feature": "AverageColorGrid8Reduced11", "weight": 1.0},
 				{"feature": "AverageColorGrid8Reduced15", "weight": 1.0},
-//				{"feature": "AverageColorRasterReduced11", "weight": 1.0},
+				{"feature": "AverageColorRasterReduced11", "weight": 1.0},
 				{"feature": "AverageColorRasterReduced15", "weight": 1.0},
-//				{"feature": "CLDReduced11", "weight": 1.0},
+				{"feature": "CLDReduced11", "weight": 1.0},
 				{"feature": "CLDReduced15", "weight": 1.0}
 			],
 			"localfeatures": [
@@ -66,36 +71,8 @@
 				{"feature": "HOGMirflickr25K512", "weight": 1.0}
 			],
 			"localfeatures_fast": [
-//				{"feature": "SURFMirflickr25K256", "weight": 1.75},
-//				{"feature": "HOGMirflickr25K256", "weight": 1.0}
-			],
-			"audiofingerprint": [
-				{"feature": "AudioFingerprint", "weight": 1.0}
-			],
-			"hpcpaverage": [
-			{ "feature": "AverageHPCP20F36B", "weight": 1.5},
-				{"feature": "AverageHPCP30F36B", "weight": 0.75}
-			],
-			"audiomatching": [
-				{"feature": "CENS12Shingle", "weight": 2.0},
-				{"feature": "HPCP12Shingle", "weight": 1.0},
-				{"feature": "MFCCShingle", "weight": 0.5}
-			],
-			"lightfield": [
-//				{"feature": "LightfieldFourier", "weight": 1.0},
-//				{"feature": "LightfieldZernike", "weight": 2.5}
-			],
-			"sphericalharmonicslow": [
-//				{"feature": "SphericalHarmonicsLow", "weight": 1.0}
-			],
-			"sphericalharmonicsdefault": [
-//				{"feature": "SphericalHarmonicsDefault", "weight": 1.0}
-			],
-			"sphericalharmonicshigh": [
-//				{"feature": "SphericalHarmonicsHigh", "weight": 1.0}
-			],
-			"pitchsequence": [
-				//				{"feature": "MelodyEstimate", "weight": 1.0}
+				{"feature": "SURFMirflickr25K256", "weight": 1.75},
+				{"feature": "HOGMirflickr25K256", "weight": 1.0}
 			]
 		}
 	},
