--- a/cineast.json
+++ b/cineast.json
@@ -73,6 +73,15 @@
 			"localfeatures_fast": [
 				{"feature": "SURFMirflickr25K256", "weight": 1.75},
 				{"feature": "HOGMirflickr25K256", "weight": 1.0}
+			],
+			"tagsft": [
+				{"feature": "TagsFtSearch", "weight": 1.0}
+			],
+			"tags": [
+				{"feature": "SegmentTags", "weight": 1.0}
+			],
+			"ocr": [
+				{"feature": "OCRSearch", "weight": 1.0}
 			]
 		}
 	},
