--- a/cineast.json
+++ b/cineast.json
@@ -2,7 +2,7 @@
 	"database": {
 		"host": "dmi-p10.dmi.unibas.ch",
 		"selector": "COTTONTAIL",
-    	"writer": "COTTONTAIL",
+    "writer": "COTTONTAIL",
 		"port": 1865,
 		"plaintext": true
 	},
@@ -27,8 +27,8 @@
 				{"feature": "AverageColor",	"weight": 2.3},
 				{"feature": "MedianColor", "weight": 1.2},
 				{"feature": "AverageFuzzyHist", "weight": 0.7},
-        		{"feature": "AverageFuzzyHistNormalized", "weight": 0.7},
-        		{"feature": "HueHistogram", "weight": 0.7},
+        {"feature": "AverageFuzzyHistNormalized", "weight": 0.7},
+        {"feature": "HueHistogram", "weight": 0.7},
 				{"feature": "MedianFuzzyHist", 	"weight": 1.3 }
 			],
 			"localcolor": [
@@ -73,7 +73,13 @@
 			"localfeatures_fast": [
 				{"feature": "SURFMirflickr25K256", "weight": 1.75},
 				{"feature": "HOGMirflickr25K256", "weight": 1.0}
-			]
+			],
+      "tagsft": [
+        {"feature": "SegmentTags", "weight": 1.0}
+      ],
+      "ocr": [
+        {"feature": "OCRSearch", "weight": 1.0}
+      ]
 		}
 	},
 
