--- a/cineast.json
+++ b/cineast.json
@@ -1,6 +1,6 @@
 {
   "database": {
-    "host": "dmi-p10.dmi.unibas.ch",
+    "host": "localhost",
     "selector": "COTTONTAIL",
     "writer": "COTTONTAIL",
     "port": 1865,
