Adding audio-feature to default config

--- a/cineast.json
+++ b/cineast.json
@@ -74,6 +74,9 @@
         {"feature": "SURFMirflickr25K256", "weight": 1.75},
         {"feature": "HOGMirflickr25K256", "weight": 1.0}
       ],
+      "audio": [
+        {"feature": "HPCP12Shingle", "weight": 1.0}
+      ],
       "tagsft": [
         {"feature": "SegmentTags", "weight": 1.0}
       ],
