--- a/cineast-core/build.gradle
+++ b/cineast-core/build.gradle
@@ -6,6 +6,8 @@ plugins {
 project.ext.jomlVersion = "1.9.6"
 project.ext.joglVersion = "2.3.2"
 project.ext.ffmpegVersion = "4.1-1.4.4"
+project.ext.grpcVersion = "1.22.1"
+project.ext.protobufVersion = "3.9.0"
 
 def osclassifier = osdetector.classifier
 if(osdetector.arch == "x86_32"){
@@ -14,11 +16,11 @@ if(osdetector.arch == "x86_32"){
 
 protobuf {
     protoc {
-        artifact = "com.google.protobuf:protoc:3.9.0"
+        artifact = "com.google.protobuf:protoc:$protobufVersion"
     }
     plugins {
         grpc {
-            artifact = "io.grpc:protoc-gen-grpc-java:1.22.1"
+            artifact = "io.grpc:protoc-gen-grpc-java:$grpcVersion"
         }
     }
     generatedFilesBaseDir = "$projectDir/generated/"
@@ -60,10 +62,10 @@ dependencies {
 
     compile group: "commons-codec", name: "commons-codec", version: "1.11"
     compile group: "commons-cli", name: "commons-cli", version: "1.4"
-    compile group: "com.google.protobuf", name: "protobuf-java", version: "3.4.0"
-    compile group: "io.grpc", name: "grpc-netty", version: "1.7.0"
-    compile group: "io.grpc", name: "grpc-protobuf", version: "1.7.0"
-    compile group: "io.grpc", name: "grpc-stub", version: "1.7.0"
+    compile group: "com.google.protobuf", name: "protobuf-java", version: "$protobufVersion"
+    compile group: "io.grpc", name: "grpc-netty", version: "${grpcVersion}"
+    compile group: "io.grpc", name: "grpc-protobuf", version: "${grpcVersion}"
+    compile group: "io.grpc", name: "grpc-stub", version: "${grpcVersion}"
     compile group: "org.bytedeco", name: "javacpp", version: "1.3.3"
     compile group: "org.jgrapht", name: "jgrapht-core", version: "1.0.1"
     compile group: "com.sparkjava", name: "spark-core", version: "2.7.1"
