--- a/cineast-runtime/build.gradle
+++ b/cineast-runtime/build.gradle
@@ -1,3 +1,7 @@
 plugins {
     id 'application'
 }
+
+dependencies {
+    compile group: 'org.eclipse.jetty', name: 'jetty-servlet', version: '9.4.19.v20190610'
+}
