--- a/build.gradle
+++ b/build.gradle
@@ -45,16 +45,6 @@ subprojects {
         compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.9.9'
         compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.9'
 
-        /** Airline (CLI parsing). */
-        compile group: 'com.github.rvesse', name: 'airline', version: '2.7.2'
-
-        /** Prometheus */
-        compile group: 'io.prometheus', name: 'simpleclient', version: '0.6.0'
-        compile group: 'io.prometheus', name: 'simpleclient_hotspot', version: '0.6.0'
-        compile group: 'io.prometheus', name: 'simpleclient_httpserver', version: '0.6.0'
-        compile group: 'io.prometheus', name: 'simpleclient_pushgateway', version: '0.6.0'
-        compile group: 'io.prometheus', name: 'simpleclient_servlet', version: '0.6.0'
-
         /** Test dependencies (JUnit 5) */
         testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.5.0'
         testCompile group: 'org.junit.platform', name: 'junit-platform-launcher', version: '1.3.2'
@@ -67,3 +57,10 @@ project(':cineast-runtime') {
         implementation project(':cineast-core')
     }
 }
+
+project(':cineast-api') {
+    dependencies {
+        implementation project(':cineast-runtime')
+    }
+}
+
