Fixed dependency problems in cineast-api. Still does not compile due to API changes in core.

--- a/build.gradle
+++ b/build.gradle
@@ -61,6 +61,7 @@ project(':cineast-runtime') {
 project(':cineast-api') {
     dependencies {
         implementation project(':cineast-runtime')
+        implementation project(':cineast-core')
     }
 }
 
