--- a/cineast-api/build.gradle
+++ b/cineast-api/build.gradle
@@ -5,4 +5,5 @@ plugins {
 dependencies {
     compile group: 'com.sparkjava', name: 'spark-core', version: '2.7.1'
     compile group: 'com.squareup.okhttp3', name: 'okhttp', version: '3.10.0'
+    compile group: 'de.svenkubiak', name: 'jBCrypt', version: '0.4.1'
 }
