Fixed some gradle problems, application works now, fat jar not yet

--- a/cineast-api/build.gradle
+++ b/cineast-api/build.gradle
@@ -2,6 +2,11 @@ plugins {
     id 'application'
 }
 
+//TODO other main for api package?
+application {
+    mainClassName = 'org.vitrivr.cineast.standalone.Main'
+}
+
 dependencies {
     compile group: 'com.sparkjava', name: 'spark-core', version: '2.7.1'
     compile group: 'com.squareup.okhttp3', name: 'okhttp', version: '3.10.0'
