--- a/cineast-core/build.gradle
+++ b/cineast-core/build.gradle
@@ -51,10 +51,11 @@ jar {
 }
 
 dependencies {
-    /* Some basic stuff (collections etcc). */
+    /* Some basic stuff (collections etc). */
     compile group: "net.sf.trove4j", name: "trove4j", version: "3.0.3"
     compile group: "com.google.guava", name: "guava", version: "28.0-jre"
     compile group: "com.googlecode.javaewah", name: "JavaEWAH", version: "1.1.6"
+    compile group: 'javax.activation', name: 'javax.activation-api', version: '1.2.0'
 
     /* Tensorflow (Java). */
     compile group: "org.tensorflow", name: "tensorflow", version: "1.9.0"
