Changed the inner workings of build.gradle: - The now only produce slim JARs (which especially makes sense for cineast-core) - Applications are now packaged through the 'application' gradle plugin.

--- a/cineast-api/build.gradle
+++ b/cineast-api/build.gradle
@@ -2,9 +2,8 @@ plugins {
     id 'application'
 }
 
-//TODO other main for api package?
 application {
-    mainClassName = 'org.vitrivr.cineast.standalone.Main'
+    mainClassName = 'org.vitrivr.cineast.api.Main'
 }
 
 dependencies {
