--- a/cineast-core/build.gradle
+++ b/cineast-core/build.gradle
@@ -44,22 +44,16 @@ sourceSets {
     }
 }
 
-jar {
-    from {
-        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
-    }
-}
-
 dependencies {
-    /* Some basic stuff (collections etc). */
+    /** Some basic stuff (collections etc). */
     compile group: "net.sf.trove4j", name: "trove4j", version: "3.0.3"
     compile group: "com.google.guava", name: "guava", version: "28.0-jre"
     compile group: "com.googlecode.javaewah", name: "JavaEWAH", version: "1.1.6"
 
-    /* Tensorflow (Java). */
+    /** Tensorflow (Java). */
     compile group: "org.tensorflow", name: "tensorflow", version: "1.9.0"
 
-    /* Protobuf & gRPC. */
+    /** Protobuf & gRPC. */
     compile group: "com.google.protobuf", name: "protobuf-java", version: "$protobufVersion"
     compile group: "io.grpc", name: "grpc-netty", version: "${grpcVersion}"
     compile group: "io.grpc", name: "grpc-protobuf", version: "${grpcVersion}"
