--- a/cineast-runtime/build.gradle
+++ b/cineast-runtime/build.gradle
@@ -2,18 +2,6 @@ plugins {
     id 'application'
 }
 
-jar {
-    manifest {
-        attributes(
-                'Main-Class': 'org.vitrivr.cineast.standalone.Main',
-                'Multi-Release' : 'true'
-        )
-    }
-    from {
-        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
-    }
-}
-
 application {
     mainClassName = 'org.vitrivr.cineast.standalone.Main'
 }
@@ -22,12 +10,11 @@ dependencies {
     /** Jetty Servlet support. */
     compile group: 'org.eclipse.jetty', name: 'jetty-servlet', version: '9.4.19.v20190610'
 
-    /* Airline (CLI parsing) */
+    /** Airline (CLI parsing) */
     compile group: 'com.github.rvesse', name: 'airline', version: '2.7.2'
     
-    /* JLine 3 */
+    /** JLine 3 */
     compile group: 'org.jline', name: 'jline', version: '3.12.1'
-
 
     /** Prometheus */
     compile group: 'io.prometheus', name: 'simpleclient', version: '0.6.0'
