--- a/cineast-api/build.gradle
+++ b/cineast-api/build.gradle
@@ -17,6 +17,14 @@ distributions {
     }
 }
 
+task fatJar(type: Jar) {
+    archiveClassifier = 'full'
+    manifest {
+        attributes 'Main-Class': 'org.vitrivr.cineast.standalone.Main'
+    }
+    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
+}
+
 dependencies {
     compile group: 'com.sparkjava', name: 'spark-core', version: '2.7.1'
     compile group: 'com.squareup.okhttp3', name: 'okhttp', version: '3.10.0'
