Fixed build.gradle for cineast-api and cineast-runtime

--- a/cineast-api/build.gradle
+++ b/cineast-api/build.gradle
@@ -21,8 +21,10 @@ task fatJar(type: Jar) {
     archiveClassifier = 'full'
     manifest {
         attributes 'Main-Class': 'org.vitrivr.cineast.standalone.Main'
+        attributes 'Multi-Release': 'true'
     }
     from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
+    with jar
 }
 
 dependencies {
