--- a/cineast-core/build.gradle
+++ b/cineast-core/build.gradle
@@ -80,6 +80,10 @@ dependencies {
     /** JavaCPP. */
     compile group: "org.bytedeco", name: "javacpp", version: "1.5.1"
 
+    compile group: 'javax.annotation', name: 'javax.annotation-api', version: '1.3.2'
+    compile group: 'javax.activation', name: 'activation', version: '1.1.1'
+
+
     /** Manual Fixes for the javacpp-devs because of naming conventions & versions. Each os is handled independently. */
     if(osdetector.os == "windows"){
         compile group: "org.bytedeco.javacpp-presets", name: "ffmpeg", version: "${ffmpegVersion}"
