--- a/cineast.json
+++ b/cineast.json
@@ -78,10 +78,16 @@
         {"feature": "HPCP12Shingle", "weight": 1.0}
       ],
       "tagsft": [
-        {"feature": "SegmentTags", "weight": 1.0}
+        {"feature": "TagsFtSearch", "weight": 1.0}
       ],
       "ocr": [
         {"feature": "OCRSearch", "weight": 1.0}
+      ],
+      "asr": [
+        {"feature":  "AudioTranscriptionSearch", "weight":  1.0}
+      ],
+      "scenecaption": [
+        {"feature":  "DescriptionTextSearch", "weight":  1.0}
       ]
     }
   },
@@ -131,12 +137,7 @@
     "uiLocation": "dist",
     "thumbnailLocation": "thumbnails",
     "objectLocation": "objects"
-  },
-
-  "visualization": {
-    "cacheEnabled": false,
-    "cachePath": "cache/art/"
-  },
+  }
 
   "monitoring":{
     "enablePrometheus": true,
