--- a/cineast-core/build.gradle
+++ b/cineast-core/build.gradle
@@ -1,6 +1,16 @@
 plugins {
-    id "com.google.osdetector" version "1.6.2"
     id "com.google.protobuf" version "0.8.2"
+    id 'maven'
+}
+
+uploadArchives {
+    repositories {
+        mavenDeployer {
+            repository(url: "https://dbis-nexus.dmi.unibas.ch/repository/maven-snapshots/") {
+                authentication(userName: "admin", password: "<Password>")
+            }
+        }
+    }
 }
 
 project.ext.jomlVersion = "1.9.6"
@@ -8,11 +18,6 @@ project.ext.joglVersion = "2.3.2"
 project.ext.ffmpegVersion = "4.1-1.4.4"
 project.ext.grpcVersion = "1.22.1"
 project.ext.protobufVersion = "3.9.0"
-
-def osclassifier = osdetector.classifier
-if(osdetector.arch == "x86_32"){
-    osclassifier = osdetector.os + "-x86"
-}
 
 protobuf {
     protoc {
@@ -72,47 +77,30 @@ dependencies {
     compile group: "org.boofcv", name: "boofcv-all", version: "0.29"
     compile group: "net.coobird", name: "thumbnailator", version: "0.4.8"
 
+    /** Java 9+ compatibility. */
+    compile group: 'javax.annotation', name: 'javax.annotation-api', version: '1.3.2'
+    compile group: 'javax.activation', name: 'activation', version: '1.1.1'
+
     /** JOGL and JOML dependencies for 3D model support. */
     compile "org.joml:joml:${jomlVersion}"
     compile "org.jogamp.gluegen:gluegen-rt:${joglVersion}"
     compile "org.jogamp.jogl:jogl-all:${joglVersion}"
+    compile "org.jogamp.jogl:jogl-all:${joglVersion}:natives-windows-amd64"
+    compile "org.jogamp.jogl:jogl-all:${joglVersion}:natives-windows-i586"
+    compile "org.jogamp.jogl:jogl-all:${joglVersion}:natives-linux-amd64"
+    compile "org.jogamp.jogl:jogl-all:${joglVersion}:natives-linux-armv6"
+    compile "org.jogamp.jogl:jogl-all:${joglVersion}:natives-linux-armv6hf"
+    compile "org.jogamp.jogl:jogl-all:${joglVersion}:natives-linux-i586"
+    compile "org.jogamp.jogl:jogl-all:${joglVersion}:natives-macosx-universal"
+    compile "org.jogamp.gluegen:gluegen-rt:${joglVersion}:natives-windows-amd64"
+    compile "org.jogamp.gluegen:gluegen-rt:${joglVersion}:natives-windows-i586"
+    compile "org.jogamp.gluegen:gluegen-rt:${joglVersion}:natives-linux-amd64"
+    compile "org.jogamp.gluegen:gluegen-rt:${joglVersion}:natives-linux-armv6"
+    compile "org.jogamp.gluegen:gluegen-rt:${joglVersion}:natives-linux-armv6hf"
+    compile "org.jogamp.gluegen:gluegen-rt:${joglVersion}:natives-linux-i586"
+    compile "org.jogamp.gluegen:gluegen-rt:${joglVersion}:natives-macosx-universal"
 
     /** JavaCPP. */
     compile group: "org.bytedeco", name: "javacpp", version: "1.5.1"
-
-    compile group: 'javax.annotation', name: 'javax.annotation-api', version: '1.3.2'
-    compile group: 'javax.activation', name: 'activation', version: '1.1.1'
-
-
-    /** Manual Fixes for the javacpp-devs because of naming conventions & versions. Each os is handled independently. */
-    if(osdetector.os == "windows"){
-        compile group: "org.bytedeco.javacpp-presets", name: "ffmpeg", version: "${ffmpegVersion}"
-        compile group: "org.bytedeco.javacpp-presets", name: "ffmpeg", version: "${ffmpegVersion}", classifier: osclassifier
-
-        compile "org.jogamp.gluegen:gluegen-rt:${joglVersion}:natives-windows-amd64"
-        compile "org.jogamp.gluegen:gluegen-rt:${joglVersion}:natives-windows-i586"
-
-        compile "org.jogamp.jogl:jogl-all:${joglVersion}:natives-windows-amd64"
-        compile "org.jogamp.jogl:jogl-all:${joglVersion}:natives-windows-i586"
-    }
-    if(osdetector.os.contains("linux")){
-        compile group: "org.bytedeco.javacpp-presets", name: "ffmpeg", version: "${ffmpegVersion}"
-        compile group: "org.bytedeco.javacpp-presets", name: "ffmpeg", version: "${ffmpegVersion}", classifier: osclassifier
-
-        compile "org.jogamp.gluegen:gluegen-rt:${joglVersion}:natives-linux-amd64"
-        compile "org.jogamp.gluegen:gluegen-rt:${joglVersion}:natives-linux-armv6"
-        compile "org.jogamp.gluegen:gluegen-rt:${joglVersion}:natives-linux-armv6hf"
-        compile "org.jogamp.gluegen:gluegen-rt:${joglVersion}:natives-linux-i586"
-
-        compile "org.jogamp.jogl:jogl-all:${joglVersion}:natives-linux-amd64"
-        compile "org.jogamp.jogl:jogl-all:${joglVersion}:natives-linux-armv6"
-        compile "org.jogamp.jogl:jogl-all:${joglVersion}:natives-linux-armv6hf"
-        compile "org.jogamp.jogl:jogl-all:${joglVersion}:natives-linux-i586"
-    }
-    if(osdetector.os == "osx"){
-        compile group: "org.bytedeco.javacpp-presets", name: "ffmpeg", version: "${ffmpegVersion}"
-        compile group: "org.bytedeco.javacpp-presets", name: "ffmpeg", version: "${ffmpegVersion}", classifier: "mac" + osclassifier
-        compile "org.jogamp.gluegen:gluegen-rt:${joglVersion}:natives-macosx-universal"
-        compile "org.jogamp.jogl:jogl-all:${joglVersion}:natives-macosx-universal"
-    }
+    compile group: "org.bytedeco.javacpp-presets", name: "ffmpeg", version: "${ffmpegVersion}"
 }
