Replaced username and <password> placeholder by variables that can be set in ~/.gradle/gradle.properties

--- a/cineast-core/build.gradle
+++ b/cineast-core/build.gradle
@@ -7,7 +7,7 @@ uploadArchives {
     repositories {
         mavenDeployer {
             repository(url: "https://dbis-nexus.dmi.unibas.ch/repository/maven-snapshots/") {
-                authentication(userName: "admin", password: "<Password>")
+                authentication(userName: "$dbisNexusUsername", password: "$dbisNexusPassword")
             }
         }
     }
