--- a/cineast-api/src/main/resources/spark-swagger.conf
+++ b/cineast-api/src/main/resources/spark-swagger.conf
@@ -10,9 +10,9 @@ spark-swagger {
   defaultModelExpandDepth = 1
   defaultModelRendering = "model"
   displayRequestDuration = false
-  docExpansion = "LIST"
+  docExpansion = "FULL"
   filter = true
-  operationsSorter = "alpha"
+  operationsSorter = "method"
   showExtensions = false
   showCommonExtensions = false
   tagsSorter = "alpha"
@@ -35,15 +35,15 @@ spark-swagger {
     contact {
       name = "Cineast Team"
       email = "contact@vitrivr.org"
-      url = "colaborators.vitrivr.org"
+      url = "https://vitrivr.org"
     }
     license {
       name = "Apache 2.0"
       url = "http://www.apache.org/licenses/LICENSE-2.0.html"
     }
     externalDoc {
-      description = "No external documentation"
-      url=""
+      description = "vitrivr's website"
+      url="http://vitrivr.org"
     }
   }
 }
