--- a/cineast.json
+++ b/cineast.json
@@ -128,6 +128,7 @@
     "enableWebsocket": true,
     "enableWebsocketSecure": false,
     "enableRest": true,
+    "enableRestLiveDoc": true,
     "enableRestSecure": false,
     "enableLegacy": false,
     "maxMessageSize": 40960000,
