--- a/cineast-api/build.gradle
+++ b/cineast-api/build.gradle
@@ -48,3 +48,12 @@ dependencies {
     compile group: 'de.svenkubiak', name: 'jBCrypt', version: '0.4.1'
     compile group: 'io.github.manusant', name: 'spark-swagger', version: '1.0.0.49-SNAPSHOT', changing:true
 }
+
+task generateOpenApiSpecs(type: JavaExec){
+    classpath = sourceSets.main.runtimeClasspath
+    main = 'org.vitrivr.cineast.api.docs.GenerateOpenApiSpecs'
+
+    def config = project.hasProperty("cineastConfig") ? project.getProperty("cineastConfig") : "cineast.json"
+
+    args("${config}")
+}
