adding defaults for nexus values

--- a/cineast-core/build.gradle
+++ b/cineast-core/build.gradle
@@ -3,6 +3,11 @@ plugins {
     id 'maven'
 }
 
+if (!project.hasProperty("build_version")) {
+    ext.dbisNexusUsername = "no"
+    ext.dbisNexusPassword = "no"
+}
+
 uploadArchives {
     repositories {
         mavenDeployer {
