--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,10 @@ allprojects {
     version = '2.5'
 }
 
+project.ext.protobufVersion = "3.9.0"
+project.ext.grpcVersion = "1.22.1"
+
+
 subprojects {
     buildscript {
         repositories {
@@ -36,6 +40,9 @@ subprojects {
     }
     compileTestJava.options.compilerArgs += enabledWarnings
 
+
+
+
     dependencies {
         /** Log4j 2 */
         compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.12.0'
@@ -50,6 +57,12 @@ subprojects {
         testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.5.0'
         testCompile group: 'org.junit.platform', name: 'junit-platform-launcher', version: '1.3.2'
         testRuntime group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.5.0'
+
+        /** Protobuf & gRPC. */
+        compile group: "com.google.protobuf", name: "protobuf-java", version: "$protobufVersion"
+        compile group: "io.grpc", name: "grpc-netty", version: "${grpcVersion}"
+        compile group: "io.grpc", name: "grpc-protobuf", version: "${grpcVersion}"
+        compile group: "io.grpc", name: "grpc-stub", version: "${grpcVersion}"
     }
 }
 
