--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,8 @@
+plugins {
+    id 'idea'
+    id "de.undercouch.download" version "4.0.2"
+}
+
 allprojects {
     group = 'org.vitrivr'
     version = '2.5'
@@ -25,7 +30,7 @@ subprojects {
         }
     }
 
-    apply plugin: "java"
+    apply plugin: 'java'
 
     sourceCompatibility = 1.8
     targetCompatibility = 1.8
@@ -79,8 +84,6 @@ project(':cineast-api') {
     }
 }
 
-apply plugin: "idea"
-
 idea {
     module {
         downloadJavadoc = true
@@ -90,3 +93,15 @@ idea {
     }
 }
 
+task getExternalFiles {
+    doLast {
+        def fileList = new File("externalFiles.csv")
+        fileList.eachLine { String line ->
+            def split = line.split(",")
+            download {
+                src split[0]
+                dest split[1]
+            }
+        }
+    }
+}
