--- a/cineast-runtime/build.gradle
+++ b/cineast-runtime/build.gradle
@@ -22,6 +22,7 @@ task fatJar(type: Jar) {
     manifest {
         attributes 'Main-Class': 'org.vitrivr.cineast.standalone.Main'
         attributes 'Multi-Release': 'true'
+		attributes 'Implementation-Version': '1.xx'
     }
     from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
     with jar
