--- a/cineast-api/build.gradle
+++ b/cineast-api/build.gradle
@@ -66,12 +66,10 @@ task fatJar(type: Jar) {
 }
 
 dependencies {
-    compile group: 'io.javalin', name: 'javalin', version: '3.8.0'
-    compile group: 'io.swagger.core.v3', name: 'swagger-core', version: '2.0.6'
-    compile group: 'com.fasterxml.jackson.module', name: 'jackson-module-kotlin', version: '2.10.1'
-    compile group: 'org.webjars', name: 'swagger-ui', version: '3.24.3'
-    compile group: 'cc.vileda', name: 'kotlin-openapi3-dsl', version: '0.20.2'
-    compile group: 'com.squareup.okhttp3', name: 'okhttp', version: '3.10.0'
+    compile('io.javalin:javalin-bundle:3.9.1'){
+        exclude group: 'ch.qos.logback', module: 'logback-classic'
+    }
+    compile group: 'com.fasterxml.jackson.module', name: 'jackson-module-kotlin', version: '2.10.5'
     compile group: 'de.svenkubiak', name: 'jBCrypt', version: '0.4.1'
 }
 
