--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,26 @@
 plugins {
+    id 'java'
     id 'idea'
-    id "de.undercouch.download" version "4.0.2"
+    id 'com.google.protobuf' version '0.8.14'
+    id 'de.undercouch.download' version "4.1.1"
+    id 'com.google.osdetector' version '1.6.2'
 }
 
 allprojects {
+    /* Group name of our artifacts */
     group = 'org.vitrivr'
-    version = '3.0.2'
+    /* Our current version */
+    version = '3.0.3'
+
+    /* Required to have subprojects dependencies*/
+    apply plugin: 'java'
+    /* Required to have protobuf in all subprojects */
+    apply plugin: 'com.google.protobuf'
+    /* Above is legacy apply method in gradle. There should be a better way to do this using convention plugins / buildSrc*/
 }
 
-project.ext.protobufVersion = "3.9.0"
-project.ext.grpcVersion = "1.22.1"
+project.ext.protobufVersion = "3.14.0"
+project.ext.grpcVersion = "1.34.0"
 
 
 subprojects {
@@ -24,13 +35,10 @@ subprojects {
 
         dependencies {
             classpath "gradle.plugin.com.google.gradle:osdetector-gradle-plugin:1.6.2"
-            classpath 'gradle.plugin.com.google.protobuf:protobuf-gradle-plugin:0.8.10'
-            classpath 'de.undercouch:gradle-download-task:3.1.2'
-            classpath 'org.junit.platform:junit-platform-gradle-plugin:1.0.0-M4'
+            classpath "gradle.plugin.com.google.protobuf:protobuf-gradle-plugin:0.8.14"
+            classpath "de.undercouch:gradle-download-task:4.1.1"
         }
     }
-
-    apply plugin: 'java'
 
     sourceCompatibility = 1.8
     targetCompatibility = 1.8
@@ -50,37 +58,37 @@ subprojects {
 
     dependencies {
         /** Log4j 2 */
-        compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.12.0'
-        compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.12.0'
-        compile group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: '2.12.0'
+        implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.+'
+        implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.+'
+        implementation group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: '2.+'
 
         /** Jackson (JSON conversion) */
-        compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.9.9'
-        compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.9'
+        implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.+'
+        implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.+'
 
         /** Test dependencies (JUnit 5) */
-        testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.5.0'
-        testCompile group: 'org.junit.platform', name: 'junit-platform-launcher', version: '1.3.2'
-        testRuntime group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.5.0'
+        testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.7.0'
+        testImplementation group: 'org.junit.platform', name: 'junit-platform-launcher', version: '1.3.2'
+        testRuntime group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.7.0'
 
         /** Protobuf & gRPC. */
-        compile group: "com.google.protobuf", name: "protobuf-java", version: "$protobufVersion"
-        compile group: "io.grpc", name: "grpc-netty", version: "${grpcVersion}"
-        compile group: "io.grpc", name: "grpc-protobuf", version: "${grpcVersion}"
-        compile group: "io.grpc", name: "grpc-stub", version: "${grpcVersion}"
+        implementation group: "com.google.protobuf", name: "protobuf-java", version: "$protobufVersion"
+        implementation group: "io.grpc", name: "grpc-netty", version: "${grpcVersion}"
+        implementation group: "io.grpc", name: "grpc-protobuf", version: "${grpcVersion}"
+        implementation group: "io.grpc", name: "grpc-stub", version: "${grpcVersion}"
     }
 }
 
 project(':cineast-runtime') {
     dependencies {
-        compile project(':cineast-core')
+        implementation project(':cineast-core')
     }
 }
 
 project(':cineast-api') {
     dependencies {
-        compile project(':cineast-runtime')
-        compile project(':cineast-core')
+        implementation project(':cineast-runtime')
+        implementation project(':cineast-core')
     }
 }
 
