--- a/cineast-api/build.gradle
+++ b/cineast-api/build.gradle
@@ -1,6 +1,5 @@
 plugins {
     id 'application'
-    id "com.google.protobuf" version "0.8.2"
 }
 
 
@@ -61,16 +60,19 @@ task fatJar(type: Jar) {
         attributes 'Multi-Release': 'true'
 		attributes 'Implementation-Version': '1.xx'
     }
-    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
+    from {
+        configurations.compileClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+    }
     with jar
 }
 
 dependencies {
-    compile('io.javalin:javalin-bundle:3.9.1'){
+    implementation('io.javalin:javalin-bundle:3.+'){
         exclude group: 'ch.qos.logback', module: 'logback-classic'
     }
-    compile group: 'com.fasterxml.jackson.module', name: 'jackson-module-kotlin', version: '2.10.5'
-    compile group: 'de.svenkubiak', name: 'jBCrypt', version: '0.4.1'
+    implementation group: 'com.fasterxml.jackson.module', name: 'jackson-module-kotlin', version: '2.+'
+    implementation group: 'de.svenkubiak', name: 'jBCrypt', version: '0.4.+'
 }
 
 
