--- a/cineast-core/build.gradle
+++ b/cineast-core/build.gradle
@@ -1,5 +1,4 @@
 plugins {
-    id "com.google.protobuf" version "0.8.2"
     id 'maven'
 }
 
@@ -18,7 +17,7 @@ uploadArchives {
     }
 }
 
-project.ext.jomlVersion = "1.9.6"
+project.ext.jomlVersion = "1.9.25"
 project.ext.joglVersion = "2.3.2"
 project.ext.ffmpegVersion = "4.1-1.4.4"
 
@@ -52,21 +51,28 @@ sourceSets {
     }
 }
 
+/**
+ * We cannot switch to implementation yet in multi-module setups.
+ * With Gradle 6.7 and MacOS, declaring dependencies as implementation means they do not get exposed to other projects
+ */
 dependencies {
+    /* Google Json: GSON, since JSON db layer is based on this */
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.+'
+
+
     /** Some basic stuff (collections etc). */
-    compile group: "net.sf.trove4j", name: "trove4j", version: "3.0.3"
+    compile group: "net.sf.trove4j", name: "trove4j", version: "3.+"
     compile group: "com.google.guava", name: "guava", version: "28.0-jre"
-    compile group: "com.googlecode.javaewah", name: "JavaEWAH", version: "1.1.6"
+    compile group: "com.googlecode.javaewah", name: "JavaEWAH", version: "1.+"
 
     /** Tensorflow (Java). */
     compile group: "org.tensorflow", name: "tensorflow", version: "1.9.0"
 
-
     /** Apache Commons Libraries */
-    compile group: "org.apache.commons", name: "commons-lang3", version: "3.9"
-    compile group: "org.apache.commons", name: "commons-math3", version: "3.6.1"
-    compile group: "commons-io", name: "commons-io", version: "2.6"
-    compile group: "commons-codec", name: "commons-codec", version: "1.12"
+    compile group: "org.apache.commons", name: "commons-lang3", version: "3.+"
+    compile group: "org.apache.commons", name: "commons-math3", version: "3.+"
+    compile group: "commons-io", name: "commons-io", version: "2.+"
+    compile group: "commons-codec", name: "commons-codec", version: "1.+"
 
     /** ImageIO and computer graphics libraries. */
     compile group: "com.twelvemonkeys.imageio", name: "imageio-jpeg", version: "3.4.1"
